feat(TCOMP-1988): change Defaults to conform signatures for java9+